{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 137,
  "lineage": "03b930cf-4c62-c2d6-a302-4a6adf80d5c7",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-20T20:46:25.317-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-assessment-nodejs/global/firewalls/nodejs-devsecops-vpc-allow-internal",
            "log_config": [],
            "name": "nodejs-devsecops-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/networks/nodejs-devsecops-vpc",
            "priority": 1000,
            "project": "devops-assessment-nodejs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/firewalls/nodejs-devsecops-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.8.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-08-20T20:46:25.317-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-assessment-nodejs/global/firewalls/nodejs-devsecops-vpc-deny-all-ingress",
            "log_config": [],
            "name": "nodejs-devsecops-vpc-deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/networks/nodejs-devsecops-vpc",
            "priority": 65534,
            "project": "devops-assessment-nodejs",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/firewalls/nodejs-devsecops-vpc-deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.119.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-08-20T09:19:03.337-07:00",
            "id": "projects/devops-assessment-nodejs/global/addresses/nodejs-devsecops-vpc-private-ip-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "nodejs-devsecops-vpc-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/networks/nodejs-devsecops-vpc",
            "prefix_length": 16,
            "project": "devops-assessment-nodejs",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/addresses/nodejs-devsecops-vpc-private-ip-range"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-assessment-nodejs/global/networks/nodejs-devsecops-vpc",
            "mtu": 0,
            "name": "nodejs-devsecops-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4182288192062002703",
            "project": "devops-assessment-nodejs",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/networks/nodejs-devsecops-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-20T21:02:35.365-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/devops-assessment-nodejs/regions/asia-south1/subnetworks/nodejs-devsecops-vpc-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "nodejs-devsecops-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/global/networks/nodejs-devsecops-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-assessment-nodejs",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-assessment-nodejs/regions/asia-south1/subnetworks/nodejs-devsecops-vpc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}